samples/_failures_safe/1761463732_62858e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41cbc7e0.c: In function ‘main’:
./samples/SAFE/__tmp_41cbc7e0.c:159:43: error: missing terminating " character
  159 |                     print_matrix(&result, "A + B
      |                                           ^~~~~~
./samples/SAFE/__tmp_41cbc7e0.c:159:21: error: expected expression at end of input
  159 |                     print_matrix(&result, "A + B
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_41cbc7e0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41cbc7e0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41cbc7e0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41cbc7e0.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41cbc7e0.c:159:21: error: expected declaration or statement at end of input
